// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c2 {
  width: 4rem;
  height: 4rem;
  margin: 0 auto;
  border-width: 3px;
  border-style: solid;
  border-color: #707377;
  border-radius: 50%;
  border-left-color: transparent;
  border-bottom-color: transparent;
  border-right-color: transparent;
  -webkit-animation: iVXCSc 650ms infinite linear;
  animation: iVXCSc 650ms infinite linear;
}

.c1 {
  text-align: center;
}

.c1.centered {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<span
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      <div
        className="c2"
      />
      
    </div>
  </div>
</span>
`;

exports[`When using snapshots with a label prop Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c2 {
  width: 4rem;
  height: 4rem;
  margin: 0 auto;
  border-width: 3px;
  border-style: solid;
  border-color: #707377;
  border-radius: 50%;
  border-left-color: transparent;
  border-bottom-color: transparent;
  border-right-color: transparent;
  -webkit-animation: iVXCSc 650ms infinite linear;
  animation: iVXCSc 650ms infinite linear;
}

.c1 {
  text-align: center;
}

.c1.centered {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  color: #707377;
  margin-top: 1.5rem;
}

<span
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      <div
        className="c2"
      />
      <div
        className="c3"
      >
        This is a label
      </div>
    </div>
  </div>
</span>
`;
